--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -294,7 +294,8 @@
           "heater_cooling_time": "Cooling time (min)",
           "auto_tpi_heating_rate": "Heating Rate ({unit}/h)",
           "auto_tpi_aggressiveness": "Aggressiveness",
-          "auto_tpi_enable_advanced_settings": "Enable Advanced Parameters"
+          "auto_tpi_enable_advanced_settings": "Enable Advanced Parameters",
+          "auto_tpi_continuous_kext": "Continuous Kext Learning"
         },
         "data_description": {
           "auto_tpi_learning_type": "Choose 'Discovery' for initial startup (Weighted Average, weight 1) or 'Fine Tuning' for continuous adjustments (EWMA, Alpha 0.08).",
@@ -302,7 +303,8 @@
           "heater_cooling_time": "Time to cool down after stop (minutes)\n\n| Type | Heating time | Cooling time |\n| :--- | :--- | :--- |\n| Electric radiator | 5mn | 7mn |\n| Water radiator | 15mn | 20mn |\n| Underfloor heating | 30mn | 45mn |",
           "auto_tpi_heating_rate": "Radiator temperature rise capacity ({unit} per hour). Leave at 0 for automatic learning (bootstrap).",
           "auto_tpi_aggressiveness": "Reduction factor for learned coefficients (50-100%). Lower values result in more conservative coefficients and reduce overshoot risk.",
-          "auto_tpi_enable_advanced_settings": "Check to access parameter fine-tuning (Alpha, Decay, Weight)."
+          "auto_tpi_enable_advanced_settings": "Check to access parameter fine-tuning (Alpha, Decay, Weight).",
+          "auto_tpi_continuous_kext": "Check to enable continuous learning of the external coefficient (Kext) outside of AutoTPI sessions."
         }
       },
       "auto_tpi_avg_settings": {
@@ -320,11 +322,13 @@
         "description": "Parameters for EWMA method.\n\nRecommendations:\n| Situation | Alpha (ema_alpha) | Decay Rate (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Initial Learning | 0.15 | 0.08 |\n| Fine Learning | 0.08 | 0.12 |\n| Continuous Learning | 0.05 | 0.02 |",
         "data": {
           "auto_tpi_ema_alpha": "Alpha",
-          "auto_tpi_ema_decay_rate": "Decay Rate"
+          "auto_tpi_ema_decay_rate": "Decay Rate",
+          "auto_tpi_continuous_kext_alpha": "Continuous Kext Alpha"
         },
         "data_description": {
           "auto_tpi_ema_alpha": "Smoothing factor (0-1). Higher = faster adaptation",
-          "auto_tpi_ema_decay_rate": "Rate at which Alpha decreases over time (stabilization)"
+          "auto_tpi_ema_decay_rate": "Rate at which Alpha decreases over time (stabilization)",
+          "auto_tpi_continuous_kext_alpha": "Smoothing factor for continuous Kext learning (Alpha). Default 0.04 (approx 3-5 days adaptation)."
         }
       },
       "sync_device_internal_temp": {
@@ -686,7 +690,8 @@
           "heater_heating_time": "Heating time (min)",
           "heater_cooling_time": "Cooling time (min)",
           "auto_tpi_aggressiveness": "Aggressiveness",
-          "auto_tpi_enable_advanced_settings": "Enable Advanced Parameters"
+          "auto_tpi_enable_advanced_settings": "Enable Advanced Parameters",
+          "auto_tpi_continuous_kext": "Continuous Kext Learning"
         },
         "data_description": {
           "auto_tpi_learning_type": "Choose 'Discovery' for initial startup (Weighted Average, weight 1) or 'Fine Tuning' for continuous adjustments (EWMA, Alpha 0.08).",
@@ -694,7 +699,8 @@
           "heater_heating_time": "Time to reach full power (minutes)",
           "heater_cooling_time": "Time to cool down after stop (minutes)\n\n| Type | Heating time | Cooling time |\n| :--- | :--- | :--- |\n| Electric radiator | 5mn | 7mn |\n| Water radiator | 15mn | 20mn |\n| Underfloor heating | 30mn | 45mn |",
           "auto_tpi_aggressiveness": "Reduction factor for learned coefficients (50-100%). Lower values result in more conservative coefficients and reduce overshoot risk.",
-          "auto_tpi_enable_advanced_settings": "Check to modify the parameters of the chosen algorithm."
+          "auto_tpi_enable_advanced_settings": "Check to modify the parameters of the chosen algorithm.",
+          "auto_tpi_continuous_kext": "Check to enable continuous learning of the external coefficient (Kext) outside of AutoTPI sessions."
         }
       },
       "auto_tpi_avg_settings": {
@@ -712,11 +718,13 @@
         "description": "Parameters for EWMA method.\n\nRecommendations:\n| Situation | Alpha (ema_alpha) | Decay Rate (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Strong adjustments | 0.15 | 0.08 |\n| Fine tuning | 0.08 | 0.12 |",
         "data": {
           "auto_tpi_ema_alpha": "Alpha",
-          "auto_tpi_ema_decay_rate": "Decay Rate"
+          "auto_tpi_ema_decay_rate": "Decay Rate",
+          "auto_tpi_continuous_kext_alpha": "Continuous Kext Alpha"
         },
         "data_description": {
           "auto_tpi_ema_alpha": "Smoothing factor (0-1). Higher = faster adaptation",
-          "auto_tpi_ema_decay_rate": "Rate at which Alpha decreases over time (stabilization)"
+          "auto_tpi_ema_decay_rate": "Rate at which Alpha decreases over time (stabilization)",
+          "auto_tpi_continuous_kext_alpha": "Smoothing factor for continuous Kext learning (Alpha). Default 0.04 (approx 3-5 days adaptation)."
         }
       },
       "heating_failure_detection": {
